--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,20 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+.idea/
+
