--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,9 +1,5 @@
 apply plugin: 'com.android.application'
 
-configurations {
-    all*.exclude group: 'com.android.support', module: 'support-v13'
-}
-
 android {
     compileSdkVersion 28
 
@@ -28,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation project(':library')
     implementation 'com.github.hotchemi:permissionsdispatcher:3.3.1'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:3.3.1'
